python-eventlet (0.19.0-2) UNRELEASED; urgency=medium

  [ Ondřej Nový ]
  * d/{control,copyright}: Use my @debian.org email address

  [ Thomas Goirand ]
  * Add allow-more-busy-cpu.patch, as tests are failing in Jenkins.

 -- Thomas Goirand <zigo@debian.org>  Tue, 19 Jul 2016 15:50:13 +0200

python-eventlet (0.19.0-1) experimental; urgency=medium

  [ Ondřej Nový ]
  * New upstream release
  * Standards-Version is 3.9.8 now (no change)
  * d/rules: Changed UPSTREAM_GIT protocol to https
  * Added python-subprocess32 to build dependencies
  * Run nosetests during build and don't ignore errors
  * Added suggests to documentation package

  [ James Page ]
  * d/control: Add netbase to BD's, enabling tests that lookup
    ports using service names.

 -- Ondřej Nový <novy@ondrej.org>  Sat, 04 Jun 2016 14:12:28 +0200

python-eventlet (0.18.4-3) unstable; urgency=medium

  * REALLY uploading to unstable.

 -- Thomas Goirand <zigo@debian.org>  Mon, 04 Apr 2016 20:51:44 +0000

python-eventlet (0.18.4-2) experimental; urgency=medium

  * Uploading to unstable.

 -- Thomas Goirand <zigo@debian.org>  Mon, 04 Apr 2016 08:44:20 +0000

python-eventlet (0.18.4-1) experimental; urgency=medium

  [ Ondřej Nový ]
  * Removed greenio_send_was_running_empty_loop_on_ENOTCONN.patch
    (Applied upstream)
  * Rebased use-packaged-python-mock-rather-than-embedded.patch
  * Rebased set-defaults-to-be-tlsv1-not-sslv23.patch
  * Rebased remove-self.assert-in-tests.patcher_test.py.patch
  * Added python(3)-dnspython build dependency.
  * Fixed VCS URLs (https).
  * Standards-Version is 3.9.7 now (no change).
  * Fixed upstream changelog.
  * Added Debian tests.
  * Added myself as uploader.

  [ Corey Bryant ]
  * New upstream release.

 -- Ondřej Nový <novy@ondrej.org>  Fri, 26 Feb 2016 21:44:11 +0100

python-eventlet (0.17.4-2) unstable; urgency=medium

  * Added greenio_send_was_running_empty_loop_on_ENOTCONN.patch.

 -- Thomas Goirand <zigo@debian.org>  Wed, 27 May 2015 21:33:41 +0000
