@@ -5,6 +5,7 @@ python-eventlet (0.19.0-2) UNRELEASED; urgency=medium
 
   [ Thomas Goirand ]
   * Add allow-more-busy-cpu.patch, as tests are failing in Jenkins.
+  * Using pkgos-dh_auto_install from openstack-pkg-tools (>= 52~).
 
  -- Thomas Goirand <zigo@debian.org>  Tue, 19 Jul 2016 15:50:13 +0200
 
